--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "SET NODE_ENV=development& nodemon server.js",
-    "start_prod": "SET NODE_ENV=production& nodemon server.js"
+    "start_prod": "SET NODE_ENV=production& node server.js"
+    
   },
   "keywords": [],
   "author": "",
