email.js utility for sending emails, forgotPassword and resetPassword controller functions and routes added

--- a/config.env
+++ b/config.env
@@ -4,3 +4,7 @@ MONGO_URI=mongodb+srv://drankitkumarthakur:AUQznVx6j6ZOrWj0@lftbackend.ouuqvr6.m
 PORT=8002
 SECRET_STR='aqw3-4erd-fcvg-ty67-8ujk-o90o-ki76-5rey'
 LOGIN_EXPIRES=10000000
+EMAIL_USER=nelda.kreiger97@ethereal.email
+EMAIL_PASSWORD=uYrTTcbb7sBY6zKaEg
+EMAIL_HOST=smtp.ethereal.email
+EMAIL_PORT=587
